<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <!-- <include layout="@layout/comment_title_layout"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#6E7B8B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="基本信息"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6E7B8B" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dip"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_airbottlecode"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_bottleinfo_airbottlecode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="3dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </HorizontalScrollView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dip"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_bottlesealcode"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_bottleinfo_bottlesealcode"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dip"
                        android:layout_weight="3"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_bottlespecifications"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_bottlespecifications"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dip"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_bottleweight"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_bottleweight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_productionunitname"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_productionunitname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#6E7B8B" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    android:text="归属单位:"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_belong_nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#6E7B8B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="检修时间"
            android:textSize="18dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6E7B8B" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_createtime"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_createtime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_checktime"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_checktime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/bottleinfo_nextchecktime"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_bottleinfo_nextchecktime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#6E7B8B" />


</LinearLayout>