<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/comment_title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="基本信息"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_airbottlecode"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_airbottlecode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dip"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textSize="13sp"
                        android:typeface="sans" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6E7B8B" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dip"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_bottlesealcode"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dip"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/initbotcode_bottlesealcode"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_weight="3"
                            android:hint="输入气瓶钢印码"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:typeface="sans" />

                        <Button
                            android:id="@+id/initbotcode_serachbysealcode"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#CD2626"
                            android:text="获取"
                            android:textColor="#FFF"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6E7B8B" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_bottlespecifications"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_bottlespecifications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6E7B8B" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_bottleweight"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <EditText
                        android:id="@+id/initbotcode_factoryNumTv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="输入出厂编号"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <Button
                        android:id="@+id/factorySearchBtn"
                        android:layout_width="50dp"
                        android:text="获取"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="#CD2626"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6E7B8B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="合作单位"
                android:textSize="18sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_productionunitname"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_productionunitname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6E7B8B" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_detectionunitname"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_detectionunitname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6E7B8B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="检修时间"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6E7B8B" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_createtime"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_createtime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6E7B8B" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_checktime"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_checktime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6E7B8B" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bottleinfo_nextchecktime"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/initbotcode_nextchecktime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:typeface="sans" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/initNewScanBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CD2626"
            android:text="扫描新的二维码"
            android:textColor="#FFF" />
    </LinearLayout>

</LinearLayout>